@@ -462,7 +462,7 @@ class ConferenceDataLoaderExecutorTest {
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getResourceNameSpeakersMap(Mockito.anyList()))
                         .thenReturn(Collections.emptyMap());
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(
-                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(), Mockito.anyString(), Mockito.anyString()))
+                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(), Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
                         .thenReturn(new SpeakerLoadResult(
                                 new LoadResult<>(
                                         Collections.emptyList(),
@@ -1365,21 +1365,26 @@ class ConferenceDataLoaderExecutorTest {
                             Collections.emptyList()));
 
             return Stream.of(
-                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME),
-                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME),
-                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME),
-                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME)
+                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0,
+                            WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null),
+                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1,
+                            WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null),
+                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2,
+                            WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null),
+                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3,
+                            WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
         void getSpeakerLoadResult(List<Speaker> speakers, SpeakerLoadMaps speakerLoadMaps, AtomicLong lastSpeakerId,
-                                  SpeakerLoadResult expected, String imageWidthParameterName, String imageHeightParameterName) throws IOException {
+                                  SpeakerLoadResult expected, String imageWidthParameterName,
+                                  String imageHeightParameterName, String imageAdditionalParameters) throws IOException {
             try (MockedStatic<ConferenceDataLoaderExecutor> conferenceDataLoaderExecutorMockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.needPhotoUpdate(
                                 Mockito.nullable(ZonedDateTime.class), Mockito.nullable(ZonedDateTime.class), Mockito.nullable(String.class),
-                                Mockito.nullable(String.class), Mockito.anyString(), Mockito.anyString()))
+                                Mockito.nullable(String.class), Mockito.anyString(), Mockito.anyString(), Mockito.nullable(String.class)))
                         .thenAnswer(
                                 (Answer<Boolean>) invocation -> {
                                     Object[] args = invocation.getArguments();
@@ -1396,7 +1401,8 @@ class ConferenceDataLoaderExecutorTest {
                                 }
                         );
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(
-                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class), Mockito.anyString(), Mockito.anyString()))
+                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class),
+                                Mockito.anyString(), Mockito.anyString(), Mockito.nullable(String.class)))
                         .thenCallRealMethod();
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.findResourceSpeaker(Mockito.any(Speaker.class), Mockito.any(SpeakerLoadMaps.class)))
                         .thenAnswer(
@@ -1409,7 +1415,7 @@ class ConferenceDataLoaderExecutorTest {
                         );
 
                 assertEquals(expected, ConferenceDataLoaderExecutor.getSpeakerLoadResult(speakers, speakerLoadMaps,
-                        lastSpeakerId, imageWidthParameterName, imageHeightParameterName));
+                        lastSpeakerId, imageWidthParameterName, imageHeightParameterName, imageAdditionalParameters));
             }
         }
     }
@@ -2457,7 +2463,7 @@ class ConferenceDataLoaderExecutorTest {
                     for (LoadResult<List<Talk>> talkLoadResult : List.of(talkLoadResult0, talkLoadResult1, talkLoadResult2, talkLoadResult3)) {
                         for (SpeakerLoadResult speakerLoadResult : List.of(speakerLoadResult0, speakerLoadResult1, speakerLoadResult2, speakerLoadResult3, speakerLoadResult4)) {
                             for (LoadResult<List<Company>> companyLoadResult : List.of(companyLoadResult0, companyLoadResult1)) {
-                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult, "w", "h"));
+                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult, "w", "h", null));
                             }
                         }
                     }
@@ -2472,15 +2478,17 @@ class ConferenceDataLoaderExecutorTest {
         @SuppressWarnings("unchecked")
         void saveFiles(LoadResult<List<Company>> companyLoadResult, SpeakerLoadResult speakerLoadResult, LoadResult<List<Talk>> talkLoadResult,
                        LoadResult<List<Place>> placeLoadResult, LoadResult<Event> eventLoadResult, String imageWidthParameterName,
-                       String imageHeightParameterName) {
+                       String imageHeightParameterName, String imageAdditionalParameters) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveFiles(
                                 Mockito.any(LoadResult.class), Mockito.any(SpeakerLoadResult.class), Mockito.any(LoadResult.class),
-                                Mockito.any(LoadResult.class), Mockito.any(LoadResult.class), Mockito.anyString(), Mockito.anyString()))
+                                Mockito.any(LoadResult.class), Mockito.any(LoadResult.class), Mockito.anyString(),
+                                Mockito.anyString(), Mockito.anyString()))
                         .thenCallRealMethod();
 
                 assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveFiles(companyLoadResult, speakerLoadResult,
-                        talkLoadResult, placeLoadResult, eventLoadResult, imageWidthParameterName, imageHeightParameterName));
+                        talkLoadResult, placeLoadResult, eventLoadResult, imageWidthParameterName, imageHeightParameterName,
+                        imageAdditionalParameters));
             }
         }
     }
@@ -2533,6 +2541,7 @@ class ConferenceDataLoaderExecutorTest {
             UrlFilename urlFilename1 = new UrlFilename("url1", "filename1");
             String WIDTH_PARAMETER_NAME = "w";
             String HEIGHT_PARAMETER_NAME = "h";
+            final String ADDITIONAL_PARAMETERS = null;
 
             SpeakerLoadResult speakerLoadResult0 = new SpeakerLoadResult(
                     new LoadResult<>(
@@ -2555,19 +2564,22 @@ class ConferenceDataLoaderExecutorTest {
                             List.of(urlFilename1)));
 
             return Stream.of(
-                    arguments(speakerLoadResult0, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME),
-                    arguments(speakerLoadResult1, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME)
+                    arguments(speakerLoadResult0, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, ADDITIONAL_PARAMETERS),
+                    arguments(speakerLoadResult1, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, ADDITIONAL_PARAMETERS)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void saveImages(SpeakerLoadResult speakerLoadResult, String imageWidthParameterName, String imageHeightParameterName) {
+        void saveImages(SpeakerLoadResult speakerLoadResult, String imageWidthParameterName, String imageHeightParameterName,
+                        String imageAdditionalParameters) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
-                mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveImages(Mockito.any(SpeakerLoadResult.class), Mockito.anyString(), Mockito.anyString()))
+                mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveImages(Mockito.any(SpeakerLoadResult.class),
+                                Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
                         .thenCallRealMethod();
 
-                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult, imageWidthParameterName, imageHeightParameterName));
+                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult, imageWidthParameterName,
+                        imageHeightParameterName, imageAdditionalParameters));
             }
         }
     }
@@ -2758,7 +2770,7 @@ class ConferenceDataLoaderExecutorTest {
     void logAndCreateSpeakerImages() {
         try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
             assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.logAndCreateSpeakerImages(
-                    List.of(new UrlFilename("url", "filename")), "{}", "w", "h"));
+                    List.of(new UrlFilename("url", "filename")), "{}", "w", "h", null));
         }
     }
 
@@ -4512,18 +4524,18 @@ class ConferenceDataLoaderExecutorTest {
             final String HEIGHT_PARAMETER_NAME = "h";
 
             return Stream.of(
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, true),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, true),
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, false),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, false),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, true),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, true),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, false),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, false),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, true),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, true),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, true, false),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, false, false)
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, true),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, true),
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, false),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, false),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, true),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, true),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, false),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, false),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, true),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, true),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, true, false),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, HEIGHT_PARAMETER_NAME, null, false, false)
             );
         }
 
@@ -4531,13 +4543,14 @@ class ConferenceDataLoaderExecutorTest {
         @MethodSource("data")
         void needPhotoUpdate(ZonedDateTime targetPhotoUpdatedAt, ZonedDateTime resourcePhotoUpdatedAt,
                              String targetPhotoUrl, String resourcePhotoFileName, String imageWidthParameterName,
-                             String imageHeightParameterName, boolean needUpdate, boolean expected) throws IOException {
+                             String imageHeightParameterName, String imageAdditionalParameters, boolean needUpdate, boolean expected) throws IOException {
             try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
-                mockedStatic.when(() -> ImageUtils.needUpdate(Mockito.anyString(), Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
+                mockedStatic.when(() -> ImageUtils.needUpdate(Mockito.anyString(), Mockito.anyString(), Mockito.anyString(),
+                                Mockito.anyString(), Mockito.nullable(String.class)))
                         .thenReturn(needUpdate);
 
                 assertEquals(expected, ConferenceDataLoaderExecutor.needPhotoUpdate(targetPhotoUpdatedAt, resourcePhotoUpdatedAt,
-                        targetPhotoUrl, resourcePhotoFileName, imageWidthParameterName, imageHeightParameterName));
+                        targetPhotoUrl, resourcePhotoFileName, imageWidthParameterName, imageHeightParameterName, imageAdditionalParameters));
             }
         }
     }
